# b2-meister

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: agent.py  main.py  models.py
ingestion/: embed.py  extract.py  knowledge.py
